--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-
 
-security.jwt.assign-key=dGhlIGNob3NlbiBrZXk=
+security.jwt.assign-key=${JWT_SECRETKEY:dGhlIGNob3NlbiBrZXk=}
 security.jwt.expiration=30
