--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,12 @@
 server.port=8080
 application.name=Spring Hunter - ONLINE Java RPG
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-
-
 security.jwt.assign-key=${JWT_SECRETKEY:dGhlIGNob3NlbiBrZXk=}
 security.jwt.expiration=30
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:mysql://localhost:3306/springhunter?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
