--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,6 @@ security.jwt.expiration=30
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url=jdbc:mysql://localhost:3306/springhunter?useTimezone=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.username=${MYSQL_USERNAME:root}
+spring.datasource.password=${MYSQL_PASSWORD:123456}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
